Modified templates according to last statismo version, modified cmake to avoid linking errors with statismo libraries

--- a/SimpleStatisticalDeformationModelTransform/CMakeLists.txt
+++ b/SimpleStatisticalDeformationModelTransform/CMakeLists.txt
@@ -1,7 +1,7 @@
 FIND_PACKAGE(STATISMO REQUIRED)
-include_directories(${STATISMO_INCLUDE_DIRS})
-link_directories(${STATISMO_LIBRARY_DIR})
-
+#Force elastix to link also statismo libraries 
+set(elxLinkLibs  ${statismo_LIBRARIES}  ${elxLinkLibs}  ) #${Boost_LIBRARIES}
+include_directories(${statismo_INCLUDE_DIRS} ${CMAKE_CURRENT_SOURCE_DIR} ) 
 ADD_ELXCOMPONENT( SimpleStatisticalDeformationModelTransformElastix
  itkAdvancedStatisticalDeformationModelTransform.h
  itkAdvancedStatisticalModelTransformBase.h
