fixed cmakelists.txt to suit case sensitive OSs and added boost includes

--- a/SimpleStatisticalDeformationModelTransform/CMakeLists.txt
+++ b/SimpleStatisticalDeformationModelTransform/CMakeLists.txt
@@ -1,6 +1,6 @@
-FIND_PACKAGE(STATISMO REQUIRED)
+FIND_PACKAGE(statismo REQUIRED)
 #Force elastix to link also statismo libraries 
-set(elxLinkLibs  ${statismo_LIBRARIES}  ${elxLinkLibs}  ) #${Boost_LIBRARIES}
+set(elxLinkLibs  ${statismo_LIBRARIES}  ${elxLinkLibs} ${Boost_LIBRARIES})
 include_directories(${statismo_INCLUDE_DIRS} ${CMAKE_CURRENT_SOURCE_DIR} ) 
 ADD_ELXCOMPONENT( SimpleStatisticalDeformationModelTransformElastix
  itkAdvancedStatisticalDeformationModelTransform.h
